--- a/.github/workflows/web-deploy.yml
+++ b/.github/workflows/web-deploy.yml
@@ -10,15 +10,25 @@ jobs:
       contents: write
     steps:
       - uses: actions/checkout@v3
-      - uses: subosito/flutter-action@v2
+
+      - name: Setup Flutter
+        uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.19.0'
+          flutter-version: '3.29.0'
           channel: 'stable'
-      - run: |
+          cache: false
+
+      - name: Check Flutter version
+        run: flutter --version
+
+      - name: Build Web
+        run: |
           flutter config --enable-web
           flutter pub get
           flutter build web --release
-      - uses: peaceiris/actions-gh-pages@v3
+
+      - name: Deploy
+        uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./build/web
