ci: update to Flutter 3.29.0

--- a/.github/workflows/web-deploy.yml
+++ b/.github/workflows/web-deploy.yml
@@ -18,6 +18,9 @@ jobs:
           channel: 'stable'
           cache: false
 
+      - name: Check Git installation
+        run: git --version
+
       - name: Check Flutter version
         run: flutter --version
 
