--- a/.github/workflows/web-deploy.yml
+++ b/.github/workflows/web-deploy.yml
@@ -11,11 +11,10 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Remove existing Flutter
+      - name: Create env file
         run: |
-          if [ -d "$FLUTTER_ROOT" ]; then
-            rm -rf "$FLUTTER_ROOT"
-          fi
+          touch .env
+          echo "YOUR_API_KEY=${{ secrets.YOUR_API_KEY }}" >> .env
 
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
@@ -23,9 +22,6 @@ jobs:
           flutter-version: '3.29.0'
           channel: 'stable'
           cache: false
-
-      - name: Flutter doctor
-        run: flutter doctor -v
 
       - name: Build Web
         run: |
