fix: workflow yaml indentation and base-href config

--- a/.github/workflows/web-deploy.yml
+++ b/.github/workflows/web-deploy.yml
@@ -29,7 +29,7 @@ jobs:
           flutter pub upgrade
           flutter config --enable-web
           flutter pub get
-          flutter build web --release
+          flutter build web --release --base-href /tasty-ramadan/
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
