--- a/.github/workflows/web-deploy.yml
+++ b/.github/workflows/web-deploy.yml
@@ -11,11 +11,6 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Create env file
-        run: |
-          touch .env
-          echo "YOUR_API_KEY=${{ secrets.YOUR_API_KEY }}" >> .env
-
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
@@ -29,7 +24,7 @@ jobs:
           flutter pub upgrade
           flutter config --enable-web
           flutter pub get
-          flutter build web --release --base-href /tasty-ramadan/
+          flutter build web --release --base-href /tasty-ramadan/ --dart-define=GEMINI_API_KEY=${{ secrets.GEMINI_API_KEY }}
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
